# insert_multiple

./: Cargo.toml  README.md
src/: inserter.rs  lib.rs  string_inserter.rs
